--- a/guikuki-web/src/main/resources/guikuki_en.properties
+++ b/guikuki-web/src/main/resources/guikuki_en.properties
@@ -9,5 +9,8 @@ header.menu.restaurants=Restaurants
 header.menu.rankings=Rankings
 header.menu.contact=Contact
 
+# Restaurant List Item
+restaurant.list.item.detail.button=Details
+
 # Footer
 footer.copyright=&copy; 2014, Guikuki. All rights reserved.
