--- a/guikuki-web/src/main/resources/guikuki_en.properties
+++ b/guikuki-web/src/main/resources/guikuki_en.properties
@@ -12,5 +12,10 @@ header.menu.contact=Contact
 # Restaurant List Item
 restaurant.list.item.detail.button=Details
 
+# Restaurant Detail
+restaurant.detail.general.zone=Zone
+restaurant.detail.general.address=Address
+restaurant.detail.general.telephono=Telephone
+
 # Footer
 footer.copyright=&copy; 2014, Guikuki. All rights reserved.
