Restaurant Detail view with tabs. First General tab completed.

--- a/guikuki-web/src/main/resources/guikuki_en.properties
+++ b/guikuki-web/src/main/resources/guikuki_en.properties
@@ -13,9 +13,13 @@ header.menu.contact=Contact
 restaurant.list.item.detail.button=Details
 
 # Restaurant Detail
+restaurant.detail.general=Overview
 restaurant.detail.general.zone=Zone
 restaurant.detail.general.address=Address
-restaurant.detail.general.telephono=Telephone
+restaurant.detail.general.telephone=Telephone
+restaurant.detail.gallery=Gallery
+restaurant.detail.menu=Menu
+restaurant.detail.opinions=Opinions
 
 # Footer
 footer.copyright=&copy; 2014, Guikuki. All rights reserved.
